<resources>
    <string name="app_name">Flixnet</string>
    <string name="test_detail_text">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости.
        Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес.
        В этой запутанной игре у каждого своя роль, но под подозрением оказываются все.
        Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="action_genre">боевики</string>
    <string name="release_date">22.04.2021</string>
    <string name="movie_name">Гнев человеческий</string>
    <string name="age_limit">18+</string>
    <string name="actors_list_title">Актёры</string>
    <string name="actor1_name">Джейсон Стэйтем</string>
    <string name="actor2_name">Холт Маккэллани</string>
    <string name="actor3_name">Джош Харнетт</string>
    <string name="main_screen_title">Популярное сейчас</string>
    <string name="movie_item_empty_message">\"Data <for>        </for> current item not found\"</string>
    <string name="mock_user_nickname">Nickname</string>
    <string name="mock_user_email">user_account@testmail.com</string>
    <string name="mock_password">vjq_gfhjkm</string>
    <string name="mock_user_fav_genre0">боевик</string>
    <string name="mock_user_fav_genre1">драмы</string>
    <string name="mock_user_fav_genre2">комедии</string>
    <string name="mock_profile_user_name">Иннокентий</string>
    <string name="profile_interests_title">Интересы</string>
    <string name="profile_user_info_title">Личные данные</string>
    <string name="profile_user_name_hint">Имя</string>
    <string name="profile_password_input_hint">Введите пароль</string>
    <string name="profile_email_input_hint">your_email@mail.com</string>
    <string name="profile_phone_input_hint">Телефон</string>
    <string name="profile_settings_title">Настройки</string>
    <string name="setting_notify_and_sound_item">Уведомления и звуки</string>
    <string name="settings_privacy_item">Конфедициальность</string>
    <string name="settings_theme_item">Тема</string>
    <string name="settings_language_item">Язык</string>
    <string name="settings_data_memory_item">Данные и память</string>
    <string name="profile_app_support_title">Приложение</string>
    <string name="app_support_question_item">Задать вопрос</string>
    <string name="app_support_report_item">Сообщить о проблеме</string>
    <string name="profile_exit_button">Выйти</string>
    <string name="default_notification_channel_id">test_channel_id</string>
    <string name="default_notification_channel_name">TestChannel</string>
    <string name="default_notification_topic">teta</string>
    <string name="default_fg_notification_channel_id">fcm_default_channel</string>
    <string name="default_fg_notification_channel_title">FCM message</string>
    <string name="default_fg_notofication_channel_name">Channel human readable title</string>
    <string name="age_limit_template">%d+</string>
    <string name="signup_fragment_title">Создать профиль</string>
    <string name="signup_name_hint">Имя</string>
    <string name="signup_mail_hint">user_mail@mail</string>
    <string name="signup_phone_hint">Телефон</string>
    <string name="signup_password_hint">Пароль</string>
    <string name="signup_confirmpass_hint">Подтверждение пароля</string>
    <string name="signup_btn_label">Сохранить</string>
    <string name="login_fragment_title">Авторизация</string>
    <string name="login_user_id_hint">Имя или электронный адрес</string>
    <string name="login_btn_label">Войти</string>

</resources>