<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_mainscreen"
    android:paddingHorizontal="@dimen/signup_horizontal_padding"
    app:chainUseRtl="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_fragment_title"
        android:textAlignment="center"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etUserID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserID"
        style="@style/SignField"
        android:hint="@string/login_user_id_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/etUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etUserPassword"
        style="@style/SignField"
        android:hint="@string/signup_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserID" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/SignButton"
        android:layout_marginVertical="40dp"
        android:text="@string/login_btn_label"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>