<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="224dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgPoster"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:background="@color/bg_color_detailed"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/DetailedMoviePoster" />

    <androidx.cardview.widget.CardView
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideLine">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color_detailed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/detailed_cardview_top_padding">

                <TextView
                    android:id="@+id/tvDetailGenre"
                    style="@style/Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:text="@string/action_genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:fontFamily="@font/roboto"
                    android:text="@string/release_date"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@id/tvDetailGenre"
                    app:layout_constraintStart_toEndOf="@id/tvDetailGenre" />

                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detailed_common_top_margin"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:layout_marginEnd="@dimen/movie_title_end_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/movie_name"
                    android:textSize="@dimen/large_text_size"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailGenre" />

                <TextView
                    android:id="@+id/tvAgeLimit"
                    style="@style/AgeLimit"
                    android:layout_width="@dimen/agelimit_width"
                    android:layout_height="@dimen/agelimit_height"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="@dimen/detailed_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/age_limit"
                    android:textSize="@dimen/medium_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/tvMovieTitle"
                    app:layout_constraintEnd_toEndOf="parent" />

                <RatingBar
                    android:id="@+id/detailMovieRating"
                    style="@style/MovieRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detailed_common_top_margin"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:numStars="5"
                    android:rating="2"
                    android:stepSize="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

                <TextView
                    android:id="@+id/tvDetailInfoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:fontFamily="@font/roboto"
                    android:text="@string/test_detail_text"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/medium_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailMovieRating" />

                <TextView
                    android:id="@+id/tvActorsListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="@dimen/detailed_horizontal_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/actors_list_title"
                    android:textSize="@dimen/big_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailInfoText" />

                <HorizontalScrollView
                    android:id="@+id/actorsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detailed_common_top_margin"
                    android:layout_marginBottom="96dp"
                    android:paddingStart="20dp"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvActorsListTitle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/actorImage1"
                            android:layout_width="@dimen/detailed_actor_img_width"
                            android:layout_height="@dimen/detailed_actor_img_height"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_statem"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/DetailedActorPoster" />

                        <TextView
                            android:id="@+id/tvActorName1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detailed_actor_name_top_margin"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/actor1_name"
                            android:textSize="@dimen/small_text_size"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/actorImage1" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/actorImage2"
                            android:layout_width="@dimen/detailed_actor_img_width"
                            android:layout_height="@dimen/detailed_actor_img_height"
                            android:layout_marginStart="@dimen/detailed_actor_img_start_margin"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_mccallany"
                            app:layout_constraintStart_toEndOf="@id/actorImage1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/DetailedActorPoster" />

                        <TextView
                            android:id="@+id/tvActorName2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detailed_actor_name_top_margin"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/actor2_name"
                            android:textSize="@dimen/small_text_size"
                            app:layout_constraintStart_toStartOf="@id/actorImage2"
                            app:layout_constraintTop_toBottomOf="@id/actorImage2" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/actorImage3"
                            android:layout_width="@dimen/detailed_actor_img_width"
                            android:layout_height="@dimen/detailed_actor_img_height"
                            android:layout_marginStart="@dimen/detailed_actor_img_start_margin"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_hartnett"
                            app:layout_constraintStart_toEndOf="@id/actorImage2"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/DetailedActorPoster" />

                        <TextView
                            android:id="@+id/tvActorName3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detailed_actor_name_top_margin"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/actor3_name"
                            android:textSize="@dimen/small_text_size"
                            app:layout_constraintStart_toStartOf="@id/actorImage3"
                            app:layout_constraintTop_toBottomOf="@id/actorImage3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>